# stringswitch

./: CMakeLists.txt  LICENSE  README.md  main.cpp  switch_fnv1a.h
include/: words-extract-match.h  words-extract-small.h  words-extract.h  words.h
